css/bootstrap/_jumbotron.scss
//
// Jumbotron
// --------------------------------------------------


.jumbotron {
  padding-top:    $jumbotron-padding;
  padding-bottom: $jumbotron-padding;
  margin-bottom: $jumbotron-padding;
  color: $jumbotron-color;
  background-color: $jumbotron-bg;

  h1,
  .h1 {
    color: $jumbotron-heading-color;
  }

  p {
    margin-bottom: ($jumbotron-padding / 2);
    // font-size: $jumbotron-font-size;
    // font-weight: 200;
    font-size: 16px;
  }

  > hr {
    border-top-color: darken($jumbotron-bg, 10%);
  }

  .container &,
  .container-fluid & {
    border-radius: $border-radius-large; // Only round corners at higher resolutions if contained in a container
    padding-left:  ($grid-gutter-width / 2);
    padding-right: ($grid-gutter-width / 2);
  }

  .container {
    max-width: 100%;
  }

  @media screen and (min-width: $screen-sm-min) {
    padding-top:    ($jumbotron-padding * 1.6);
    padding-bottom: ($jumbotron-padding * 1.6);

    .container &,
    .container-fluid & {
      padding-left:  ($jumbotron-padding * 2);
      padding-right: ($jumbotron-padding * 2);
    }

    h1,
    .h1 {
      font-size: $jumbotron-heading-font-size;
    }
  }
}

.heroHeader {
  width: 75%;
  height: auto;
  display: block;
  margin: 0 auto 25px;
}

.whiteSpaceTop {
  margin-top: 25px;
}

.serviceFirstRow .serviceDescriptionContainer {
  min-height: 285px;
  @media(max-width: $screen-md) {
    min-height: 0;
  }
  .btn {
    // position: absolute;
    // bottom: 0;
  }
}

.serviceSecondRow .serviceDescriptionContainer {
  min-height: 290px;
  @media(max-width: $screen-md) {
    min-height: 0;
  }
}

.serviceDescriptionContainer {
  border: 1px solid #eeeeee;
  padding: 0 15px 15px 15px;
  background: lighten(#6ba7e2, 32%);
  @media(max-width: $screen-md) {
    margin-bottom: 30px;
    min-height: 0;
  }
}

.contactRow {
  input {
    width: 100%;
    box-sizing: border-box;
    border: 1px solid transparent;
    margin-bottom: 20px;
    padding: 16px;
    font-size: 16px;
    @media(max-width: 768px) {
      width: 90%;
    }
    &:focus {
      border: 1px solid #6ba7e2;
      outline: none;
    }
  }
}

.officeRow {
  @media(max-width: 768px) {
    margin-left: 0;
    margin-right: 0;
  }
  iframe {
    width: 70%;
    height: 300px;
  }
}

.singlePhoto {
  width: 50%;
  display: block;
  margin: auto;
}

.messageRow {
  input.btn {
    width: 30%;
    display: block;
    margin: 20px auto;
  }
  textarea {
    width: 100%;
    box-sizing: border-box;
    border: 1px solid transparent;
    height: 200px;
    padding: 16px;
    font-size: 16px;
    @media(max-width: 768px) {
      width: 90%;
    }
    &:focus {
      outline: none;
      border: 1px solid #6ba7e2;
    }
  }
}

.adjustedAnchor:before {
  display: block;
  content: "";
  margin-top: -170px;
  height: 170px;
  visibility: hidden;
  @media(max-width: 768px) {
    margin-top: -150px;
    height: 170px;
  }
}

